--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.8",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "mssql": "^11.0.1",
     "react": "^18.3.1",
@@ -17,7 +21,7 @@
   "scripts": {
     "start": "npm-run-all -p start-front start-back",
     "start-front": "react-scripts start",
-    "start-back": "node .\\src\\backend\\server.js ",
+    "start-back": "node .\\src\\backend\\server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
