--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all -p start-front start-back",
+    "start-front": "react-scripts start",
+    "start-back": "node .\\src\\backend\\server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
